--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
 
 
   <nav class="navbar navbar-default">
+      <div class="col-md-8">
         <div class="row">
-          <div class="col-md-8">
-            <div class="container-fluid">
-              <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="container">
               <div class="navbar-header">
-                <a class="navbar-brand" href="#">Valentin Wong</a>
+                <a class="navbar-brand" href="index.html">Valentin Wong</a>
               </div>
             </div>
            </div>
