--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="UTF-8">
-  <title>Bootstrap Portfolio</title>
+  <title>Portfolio</title>
 
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -31,13 +31,12 @@
   <!-- <button class="btn btn-danger btn-lg">Fancy Button</button> -->
   <!-- Note the specific Bootstrap classes -->
 
-  <nav class="navbar navbar-default">
+   <nav class="navbar navbar-default">
+      <div class="col-md-8">
         <div class="row">
-          <div class="col-md-8">
-            <div class="container-fluid">
-              <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="container">
               <div class="navbar-header">
-                <a class="navbar-brand" href="#">Valentin Wong</a>
+                <a class="navbar-brand" href="index.html">Valentin Wong</a>
               </div>
             </div>
            </div>
@@ -50,9 +49,9 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-        </div><!-- /.container-fluid -->
+        </div>
   </nav>
-
+  
 <!-- a Bootstrap row with columns -->
   <div class="row">
       <div class="col-md-8">
